# proekt

folder/: CMakeLists.txt  side.cpp
folder/main/: CMakeLists.txt  main.cpp  main.h
folder/main/less/: CMakeLists.txt  less.cpp  less.h
tmp_folder/: CMakeCache.txt  Makefile  cmake_install.cmake  side
tmp_folder/main/: Makefile  cmake_install.cmake
tmp_folder/main/less/: Makefile  cmake_install.cmake
